fix webcam problem and login

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app-view">
     <!-- <app-upper-menu></app-upper-menu> -->
-    <app-sidebar-menu></app-sidebar-menu>-->
+    <app-sidebar-menu *ngIf="getLogged()"></app-sidebar-menu>
     <router-outlet></router-outlet>
 <!--  <app-addclient></app-addclient>-->
 </div>
