--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,4 +1,5 @@
-<mat-card>
+<div class="container">
+  <mat-card>
     <mat-card-content>
       <div class="header">
         <P>Sign in  </P>
@@ -39,4 +40,6 @@
       </form>
     </mat-card-content>
   </mat-card>
+</div>
+
 
