--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,13 +1,15 @@
-.container{
-  display: flex;
-  flex-flow: column;
-  height: 100%;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-}
+@media (min-width: 1200px){
 
-mat-card {
+  .container{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  mat-card {
     max-width: 500px;
     text-align: center;
     max-height: 600px;
@@ -61,11 +63,301 @@ mat-card {
       background-color: #27AE61;
   }
 
-  mat-form-field.mat-focused span.mat-form-field-label-wrapper label {
-    color:#27AE61 !important;
+  ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: #27AE61 !important;
+  }
+  
+  
+}
+
+@media (min-width: 900px) and (max-width: 1200px){
+
+  .container{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  mat-card {
+    max-width: 500px;
+    text-align: center;
+    max-height: 600px;
+   margin-left: auto;
+   margin-right: auto;
+   vertical-align: center;
+  }
+  
+  .header{
+    text-align: center;
+    color: #27AE61;
+    size: 12;
+    font-weight: bold;
+    font-size: 150%;
+  
+  }
+  .full-width {
+    width: 80%;
+  }
+  
+  .button-row {
+    padding-top: 5px;
+  }
+  
+  .button-row a {
+    margin-right: 8px;
+    text-align: center;
+  }
+  
+  .forget-password{
+    padding-left: 0px;
+    color: #27AE61;
+  }
+  
+  
+  .emailInput{
+    padding-top: 10px;
+  
+  }
+  
+ 
+  
+  .aLink{
+    float: right;
+    padding-right: 60px;
+    text-decoration: none;
+    color: #27AE61;
   }
 
-  .mat-form-field-outline {
-    background-color: #27AE61 !important;
+  .mat-flat-button{
+      background-color: #27AE61;
+  }
+
+  ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: #27AE61 !important;
+  }
+  
+  
 }
+
+@media (min-width: 599px) and (max-width: 900px){
+
+  .container{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  mat-card {
+    max-width: 500px;
+    text-align: center;
+    max-height: 600px;
+   margin-left: auto;
+   margin-right: auto;
+   vertical-align: center;
+  }
+  
+  .header{
+    text-align: center;
+    color: #27AE61;
+    size: 12;
+    font-weight: bold;
+    font-size: 150%;
+  
+  }
+  .full-width {
+    width: 80%;
+  }
+  
+  .button-row {
+    padding-top: 5px;
+  }
+  
+  .button-row a {
+    margin-right: 8px;
+    text-align: center;
+  }
+  
+  .forget-password{
+    padding-left: 0px;
+    color: #27AE61;
+  }
+  
+  
+  .emailInput{
+    padding-top: 10px;
+  
+  }
+  
  
+  
+  .aLink{
+    float: right;
+    padding-right: 60px;
+    text-decoration: none;
+    color: #27AE61;
+  }
+
+  .mat-flat-button{
+      background-color: #27AE61;
+  }
+
+  ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: #27AE61 !important;
+  }
+  
+  
+}
+
+@media (min-width: 350px) and (max-width: 599px){
+
+  .container{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  mat-card {
+    max-width: 300px;
+    text-align: center;
+    max-height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+   vertical-align: center;
+  }
+  
+  .header{
+    text-align: center;
+    color: #27AE61;
+    size: 12;
+    font-weight: bold;
+    font-size: 150%;
+  
+  }
+  .full-width {
+    width: 80%;
+  }
+  
+  .button-row {
+    padding-top: 5px;
+  }
+  
+  .button-row a {
+    margin-right: 8px;
+    text-align: center;
+  }
+  
+  .forget-password{
+    padding-left: 0px;
+    color: #27AE61;
+  }
+  
+  
+  .emailInput{
+    padding-top: 10px;
+  
+  }
+  
+ 
+  
+  .aLink{
+    float: right;
+    padding-right: 60px;
+    text-decoration: none;
+    color: #27AE61;
+  }
+
+  .mat-flat-button{
+      background-color: #27AE61;
+  }
+
+  ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: #27AE61 !important;
+  }
+  
+  
+}
+
+@media (min-width: 200px) and (max-width: 350px){
+
+  .container{
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  mat-card {
+    max-width: 500px;
+    text-align: center;
+    max-height: 600px;
+   margin-left: auto;
+   margin-right: auto;
+   vertical-align: center;
+  }
+  
+  .header{
+    text-align: center;
+    color: #27AE61;
+    size: 12;
+    font-weight: bold;
+    font-size: 150%;
+  
+  }
+  .full-width {
+    width: 80%;
+  }
+  
+  .button-row {
+    padding-top: 5px;
+  }
+  
+  .button-row a {
+    margin-right: 8px;
+    text-align: center;
+  }
+  
+  .forget-password{
+    padding-left: 0px;
+    color: #27AE61;
+  }
+  
+  
+  .emailInput{
+    padding-top: 10px;
+  
+  }
+  
+ 
+  
+  .aLink{
+    float: right;
+    padding-right: 60px;
+    text-decoration: none;
+    color: #27AE61;
+  }
+
+  .mat-flat-button{
+      background-color: #27AE61;
+  }
+
+  ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color: #27AE61 !important;
+  }
+  
+  
+}
+
+
+
+  
