fix position & login problem

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <mat-card-content>
       <div class="header">
-        <P>Sign in  </P>
+        <p>Sign in</p>
       </div>
       <form  name="loginForm" [formGroup]="loginForm">
         <div class="emailInput">
