--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -7,6 +7,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    background-color: #AFE3C6;
   }
 
   mat-card {
@@ -79,6 +80,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    background-color: #AFE3C6;
   }
   
   mat-card {
@@ -151,6 +153,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    background-color: #AFE3C6;
   }
   
   mat-card {
@@ -223,6 +226,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    background-color: #AFE3C6;
   }
   
   mat-card {
@@ -295,29 +299,37 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    background-color: #AFE3C6;
   }
   
   mat-card {
-    max-width: 500px;
+    max-width: 250px;
     text-align: center;
-    max-height: 600px;
+    max-height: 250px;
    margin-left: auto;
    margin-right: auto;
    vertical-align: center;
   }
+
   
   .header{
     text-align: center;
     color: #27AE61;
     size: 12;
     font-weight: bold;
-    font-size: 150%;
+    font-size: 18px;
   
   }
   .full-width {
     width: 80%;
   }
-  
+  ::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
+  ::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+
+  ::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+      transform: translateY(-1.1em) scale(.75);
+      width: 133.33333%;
+  }
   .button-row {
     padding-top: 5px;
   }
@@ -342,9 +354,9 @@
   
   .aLink{
     float: right;
-    padding-right: 60px;
     text-decoration: none;
     color: #27AE61;
+    font-size: 12px;
   }
 
   .mat-flat-button{
@@ -354,6 +366,8 @@
   ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
     color: #27AE61 !important;
   }
+
+
   
   
 }
