display user name

--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -60,7 +60,7 @@
                 </a> 
             -->
             <div fxFlex="100%" class="flexExpand"></div>
-            <span style="font-size: 12px; color: #444242;">Auditor Hicham</span>
+            <span style="font-size: 12px; color: #444242;">{{name}}</span>
             <button mat-icon-button [matMenuTriggerFor]="logout" #menuTrigger="matMenuTrigger"
                 (click)="menuTrigger.openMenu()">
 
