add redirect to map

--- a/frontend/src/app/clients/clients.component.html
+++ b/frontend/src/app/clients/clients.component.html
@@ -1,4 +1,4 @@
-<div class="container" align="center">
+<div class="clients_container">
     <button mat-button>
         <mat-icon>filter_list</mat-icon>
         Filter
