--- a/frontend/src/app/clients/clients.component.css
+++ b/frontend/src/app/clients/clients.component.css
@@ -1,17 +1,19 @@
-.container{
-    width: 100%;
-    height: 100%;
+.clients_container{
+    margin: auto;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
     padding: 8px;
     background-color: #F6F6F6;
 }
-.container button{
+.clients_container button{
     margin: 8px;
     border-radius: 10px;
     color: #646161;
     border: 1px solid #959191;
     width: 140px;
 }
-.container button mat-icon{
+.clients_container button mat-icon{
     color: #27AE61;
 }
 
