--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -10,7 +10,7 @@
 
             </div>
             <button mat-button class="btn-primary" routerLink="/addclient">Add PDV</button>
-            <button mat-button class="btn-warning">Synchronize</button>
+            <button mat-button class="btn-warning" (click)="sync()">Synchronize</button>
       </div>
       <div class="map-top-elements">
             <!-- <button mat-raised-button class="my-location">
