--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -1,74 +1,111 @@
+<div *ngIf="loggedUser.role == 'Back Office'">
+    <mat-dialog-content>
+        <div class="dialog-container">
+            <div class="aud-sell-container">
+                <section class="sell-container">
+                    <span>Seller</span>
+                    <div class="pdv-info-container">
+                        <div class="pdv-img">
+                            <img src="/assets/images/pdvImage.jpg" alt="">
+                        </div>
+                        <div class="pdv-info">
+                            <p>Auditor: auditor1</p>
+                            <p>Name: {{data.NomPrenom}}</p>
+                            <p>Phone Number: 0656453456</p>
+                            <p>Type: Demi Gros</p>
+                        </div>
+                    </div>
+                    <div class="pdv-action-btns">
+                        <button mat-button class="btn-valid">Valid</button>
+                        <button mat-button class="btn-refus">Refus</button>
+                    </div>
+                </section>
+                <section class="aud-container">
+                    <span>Auditor</span>
+                    <div class="pdv-info-container">
+                        <div class="pdv-img">
+                            <img src="/assets/images/pdvImage.jpg" alt="">
+                        </div>
+                        <div class="pdv-info">
+                            <p>Auditor: auditor1</p>
+                            <p>Name: {{data.NomPrenom}}</p>
+                            <p>Phone Number: 0656453456</p>
+                            <p>Type: Demi Gros</p>
+                        </div>
+                    </div>
+                    <div class="pdv-action-btns">
+                        <button mat-button class="btn-valid">Valid</button>
+                        <button mat-button class="btn-refus">Refus</button>
+                    </div>
+                </section>
+            </div>
+            <div class="validPDV-container">
+                <span>Validated Client</span>
 
-<mat-dialog-content>
-    <div class="dialog-container">
+                <section class="valid-pdv-container">
+                    <div class="pdv-info-container">
+                        <div class="pdv-img">
+                            <img src="/assets/images/pdvImage.jpg" alt="">
+                        </div>
+                        <div class="pdv-info">
+                            <p>Auditor: auditor1</p>
+                            <p>Name: {{data.NomPrenom}}</p>
+                            <p>Phone Number: 0656453456</p>
+                            <p>Type: Demi Gros</p>
+                        </div>
+                    </div>
+                    <div class="nfc-info-container">
+                        <div class="nfc-card">
+                            <p style="margin: 0;">NFC not intalled yet</p>
+                        </div>
+                    </div>
+                </section>
+
+            </div>
+        </div>
+        <!-- <p> {{data.NomPrenom}}</p> -->
+    </mat-dialog-content>
+
+    <mat-dialog-actions class="action-btns" align="center">
+        <button mat-raised-button color="primary" class="btn-green">Update Client</button>
+        <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
+        <button mat-raised-button color="primary" class="btn-orange">Navigate to the client</button>
+    </mat-dialog-actions>
+</div>
+<div *ngIf="loggedUser.role == 'Admin'">
+    <mat-dialog-content>
         <div class="aud-sell-container">
             <section class="sell-container">
-                <span>Seller</span>
                 <div class="pdv-info-container">
                     <div class="pdv-img">
-                        <img src="/assets/images/pdvImage.jpg" alt="">
+                        <img src="{{data.NFCP}}" alt="">
                     </div>
                     <div class="pdv-info">
                         <p>Auditor: auditor1</p>
-                        <p>Name: BOUDAOUDI Abdellah</p>
+                        <p>Name: {{data.NomPrenom}}</p>
                         <p>Phone Number: 0656453456</p>
                         <p>Type: Demi Gros</p>
                     </div>
                 </div>
-                <div class="pdv-action-btns">
-                    <button mat-button class="btn-valid">Valid</button>
-                    <button mat-button class="btn-refus">Refus</button>
-                </div>
-            </section>
-            <section class="aud-container">
-                <span>Auditor</span>
                 <div class="pdv-info-container">
                     <div class="pdv-img">
-                        <img src="/assets/images/pdvImage.jpg" alt="">
+                        <img src="{{data.PVP}}" alt="">
                     </div>
                     <div class="pdv-info">
                         <p>Auditor: auditor1</p>
-                        <p>Name: BOUDAOUDI Abdellah</p>
+                        <p>Name: {{data.NomPrenom}}</p>
                         <p>Phone Number: 0656453456</p>
                         <p>Type: Demi Gros</p>
                     </div>
                 </div>
-                <div class="pdv-action-btns">
-                    <button mat-button class="btn-valid">Valid</button>
-                    <button mat-button class="btn-refus">Refus</button>
-                </div>
+                
             </section>
         </div>
-        <div class="validPDV-container">
-            <span>Validated Client</span>
+        <!-- <p> {{data.NomPrenom}}</p> -->
+    </mat-dialog-content>
 
-            <section class="valid-pdv-container">
-                <div class="pdv-info-container">
-                    <div class="pdv-img">
-                        <img src="/assets/images/pdvImage.jpg" alt="">
-                    </div>
-                    <div class="pdv-info">
-                        <p>Auditor: auditor1</p>
-                        <p>Name: BOUDAOUDI Abdellah</p>
-                        <p>Phone Number: 0656453456</p>
-                        <p>Type: Demi Gros</p>
-                    </div>
-                </div>
-                <div class="nfc-info-container">
-                    <div class="nfc-card">
-                        <p style="margin: 0;">NFC not intalled yet</p>
-                    </div>
-                </div>
-            </section>
-
-        </div>
-    </div>
-    <!-- <p> {{data.NomPrenom}}</p> -->
-</mat-dialog-content>
-
-<mat-dialog-actions class="action-btns" align="center">
-    <button mat-raised-button color="primary" class="btn-green">Update Client</button>
-    <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
-    <button mat-raised-button color="primary" class="btn-orange">Navigate to the client</button>
-</mat-dialog-actions>
-
+    <mat-dialog-actions class="action-btns" align="center">
+        <button mat-raised-button color="primary" class="btn-green" routerLink="/updateclient" mat-dialog-close>Update Client</button>
+        <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
+    </mat-dialog-actions>
+</div>
