--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -72,7 +72,7 @@
         <button mat-raised-button color="primary" class="btn-orange">Navigate to the client</button>
     </mat-dialog-actions>
 </div>
-<div *ngIf="loggedUser.role == 'Admin'">
+<div *ngIf="loggedUser.role == 'Seller'">
     <mat-dialog-content>
         <div class="aud-sell-container">
             <section class="sell-container">
