--- a/frontend/src/app/map/map.component.html
+++ b/frontend/src/app/map/map.component.html
@@ -9,7 +9,7 @@
                   </button>
 
             </div>
-            <button mat-button class="btn-primary" routerLink="/addclient">Add PDV</button>
+            <button mat-button class="btn-primary" [disabled]="!statusAddClient" [routerLink]="['/addclient', mySector]">Add PDV</button>
             <button mat-button class="btn-warning" (click)="sync()">Synchronize</button>
       </div>
       <div class="map-top-elements">
